crates/reinhardt-forms/crates/macros/tests/ui/fail/unknown_field_type.stderr
error: form! macro is not yet implemented
 --> tests/ui/fail/unknown_field_type.rs:8:15
  |
8 |       let _form = form! {
  |  _______________^
9 | |         fields: {
10| |             name: FooField {},
11| |         },
12| |     };
  |  |_____^
  |
  = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
